# sanepic

./: .cproject  .project  AUTHORS  ChangeLog  Makefile.am  MixMat_250_2184000_th5c.psd  NEWS  README  TODO.FixBug  TODO.GPROF  TODO.Package  TODO.Valgrind  TODO.package  clean.sh  configure.ac  rcw_120_script
Sanelib/: .cproject
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  sanepic.cron.d.ex  sanepic.default.ex  sanepic.doc-base.EX  sanepic.install  watch.ex
nrutil/: nrcode.c  nrcode.h  nrutil.c
saneCheck/: .cproject  .project  configure.ac  gmon.out
saneCheck/src/: Makefile.am  SaneCheckParse.cpp  SaneCheckParse.h  SaneCheckTools.cpp  SaneCheckTools.h  main.cpp  parse_saneCheck.cpp  parse_saneCheck.h  tools.cpp  tools.h
saneFix/: .cproject  .project  configure.ac
saneFix/src/: Makefile.am  SaneFixParse.cpp  SaneFixParse.h  SaneFixTools.cpp  SaneFixTools.h  main.cpp  parse_saneFix.cpp  parse_saneFix.h  tools.cpp  tools.h
saneFrameOrder/: .cproject  .project  configure.ac
saneFrameOrder/src/: FrameOrder.cpp  FrameOrder.h  Makefile.am  configure.in  main.cpp  parse_FBFO.cpp  parse_FBFO.h
saneFrameOrder/src/.libs/: saneFrameOrder_PARA
saneIO/: .cproject  .project  configure.ac
saneIO/src/: CovMatrixIO.cpp  CovMatrixIO.h  Crc.cpp  Crc.h  DataIO.cpp  DataIO.h  ErrorCode.h  ImageIO.cpp  ImageIO.h  InputFileIO.cpp  InputFileIO.h  MPIConfiguration.cpp  MPIConfiguration.h  Makefile.am  ParserFunctions.cpp  ParserFunctions.h  StructDefinition.h  TemporaryIO.cpp  TemporaryIO.h  Utilities.cpp  Utilities.h  binaryFileIO.c  binaryFileIO.h  boloIO.cpp  boloIO.h  configure.in  covMatrixIO.cpp  covMatrixIO.h  covMatrix_IO.cpp  covMatrix_IO.h  crc.cpp  crc.h  dataIO.cpp  dataIO.h  error_code.h  imageIO.cpp  imageIO.h  inline_IO.h  inline_IO2.cpp  inline_IO2.h  (+15 more)
saneIO/tests/: Makefile.am  compare_df.pro  data  dirfileTest.cpp  full_run.sh  parserTest  parserTest.cpp  sanepic.ini  sanepic_ref.ini  test_compiler.sh  test_para.sh  test_para_result
saneIO/tests/inputDir/: OD162_0x500022F9L_SpirePacsParallel_polaris_notdf_all_sanepic.ell  OD162_0x500022F9L_SpirePacsParallel_polaris_notdf_all_sanepic.mix  OD162_0x500022F9L_SpirePacsParallel_polaris_notdf_all_sanepic_PLW.bolo  OD162_0x500022FAL_SpirePacsParallel_polaris_notdf_all_sanepic.ell  OD162_0x500022FAL_SpirePacsParallel_polaris_notdf_all_sanepic.mix  OD395_0x500051E6L_SpirePacsParallel_polaris-2_notdf_all_sanepic.ell  OD395_0x500051E6L_SpirePacsParallel_polaris-2_notdf_all_sanepic_veryfew.bolo  OD395_0x500051E7L_SpirePacsParallel_polaris-1_notdf_all_sanepic.ell  OD395_0x500051E7L_SpirePacsParallel_polaris-1_notdf_all_sanepic_PMW.bolo  fCutFile.fcut  fhp.fhp  fsamp.fsamp  listFile.list  mask.fits  node.weight.there  test_mask.pro
saneInv/: .cproject  .project  configure.ac
saneInv/src/: Makefile.am  SaneInvTools.cpp  configure.in  invMatrix.cpp  invMatrix.h  main.cpp  parseInv.cpp  parseInv.h  saneInvIO.cpp  saneInvIO.h
saneLib/: .cproject  .project  configure.ac
saneLib/src/: CorrPreprocess.cpp  CorrPreprocess.h  Corr_preprocess.cpp  Corr_preprocess.h  Corr_preprocess2.cpp  FitPoly.cpp  FitPoly.h  Makefile.am  MapMaking.cpp  MapMaking.h  NoCorrPreprocess.cpp  NoCorrPreprocess.h  NoCorr_preprocess.cpp  NoCorr_preprocess.h  TodProcess.cpp  TodProcess.h  cholesky.cpp  cholesky.h  configure.in  fitpoly.cpp  fitpoly.h  map_making.cpp  map_making.h  todprocess.cpp  todprocess.h
saneLib/tests/: map_mak_test.cpp  map_mak_tools.cpp  map_mak_tools.h
saneMerge/: .cproject  .project  configure.ac
saneMerge/src/: Makefile.am  SaneMergeParse.cpp  SaneMergeParse.h  SaneMergeTools.cpp  SaneMergeTools.h  main.cpp  parse_saneMerge.cpp  parse_saneMerge.h  tools.cpp  tools.h
saneNaiv/: .cproject  .project
sanePS/: .cproject  .project  configure.ac
sanePS/.externalToolBuilders/: org.eclipse.pde.ManifestBuilder (6).launch
sanePS/src/: ChangeLog  EstimPSSteps.cpp  EstimPSSteps.h  Makefile.am  configure.in  estimPS.cpp  estimPS.h  estimPS_ancien.cpp  estimPS_steps.cpp  estimPS_steps.h  estimPS_steps_nr.cpp  main.cpp  parsePS.cpp  parsePS.h  sanePSIO.cpp  sanePSIO.h
sanePic/: .cproject  .project  configure.ac  gmon.out
sanePic/sanepic_Conj_Gradient/src/: Corr_preprocess.cpp  estimPS.cpp  map_making.cpp  sane_io.h  todprocess.cpp
sanePic/src/: Corr_preprocess29_06.cpp  Corr_preprocess29_06.h  Makefile.am  NoCorr_preprocess.cpp  NoCorr_preprocess.h  NoCorr_preprocess29_06.cpp  NoCorr_preprocess29_06.h  SanePicIO.cpp  SanePicIO.h  configure.in  conjugate_gradient.cpp  conjugate_gradient.h  estimPS.cpp  estimPS.h  estimPS_sanepic.cpp  estimPS_sanepic.h  main.cpp  map_making.cpp  map_making29-06.h  map_making_29_06.cpp  parseSanepic.cpp  parseSanepic.h  sane_io.cpp  sanepic_Main_Loop.cpp  sanepic_preprocess.cpp  sanepic_preprocess.h  todprocess.cpp  todprocess.h  write_maps_to_disk.cpp  write_maps_to_disk.h
sanePos classic/: ._sanepic.bi  .cproject  callgrind.out.21758  gmon.out  log3.txt  log_callgrind.txt  log_gprof_sanePos.txt  (+3 more)
sanePos/src/: Coord.cpp  Coord.h  MainSanepicCorr_mpi.cpp  Makefile.am  SanePosMapMaking.cpp  SanePosMapMaking.h  SanePosPreProcess.cpp  SanePosPreProcess.h  blastSpecific.cpp  blastSpecific.h  configure.in  coord.cpp  coord.h  main.cpp  map_making.cpp  map_making.h  mpi_architecture_builder.cpp  mpi_architecture_builder.h  parsePos.cpp  parsePos.h  projection_wcs.cpp  projection_wcs.h  sanePos_map_making.cpp  sanePos_map_making.h  sanePos_preprocess.cpp  sanePos_preprocess.h
sanePre/src/: Corr_preprocess.cpp  Corr_preprocess.h  MainSanepicCorr.cc  MainSanepicCorr_mpi.cpp  Makefile.am  MapMakerBuildInvN_full.cc  MapMakerBuildInvN_full2.cc  NoCorr_preprocess.cpp  NoCorr_preprocess.h  configure.in  main.cpp  map_making.cpp  map_making.h  mpi_architecture_builder.cpp  mpi_architecture_builder.h  parsePre.cpp  parsePre.h  sanePre_preprocess.cpp  sanePre_preprocess.h  sane_io.cpp  todprocess.cpp  todprocess.h
(+475 files in other folders)
