ACLOCAL_AMFLAGS = -I m4

if PARA
 OPT_PARA = saneFrameOrder
endif

SUBDIRS = nr iniparser saneIO saneLib saneInv sanePos sanePre sanePic $(OPT_PARA) $(OPT_SANEPS) $(OPT_CHECKFIX) $(OPT_SPLITMERGE)
# DIST_SUBDIRS = nr iniparser saneIO saneLib saneInv sanePos sanePre sanePic saneFrameOrder

# Distribution with sanePS included
DIST_SUBDIRS = nr iniparser saneIO saneLib saneInv sanePos sanePre sanePic saneFrameOrder sanePS
